2003-10-21  Jakub Steiner <jimmac@ximian.com>

	* 16x16/stock/media/stock_media-stop.png
	* 16x16/stock/media/stock_media-rew.png
	* 16x16/stock/media/stock_media-rec.png
	* 16x16/stock/media/stock_media-prev.png
	* 16x16/stock/media/stock_media-play.png
	* 16x16/stock/media/stock_media-pause.png
	* 16x16/stock/media/stock_media-next.png
	* 16x16/stock/media/stock_media-fwd.png
	* 16x16/stock/media/Makefile.am: media icons in menu size

=== gnome-icon-theme 1.1.0 ===
	
2003-10-20  Alexander Larsson  <alexl@redhat.com>

	* NEWS: 
	* configure.in:
	Release 1.1.0 for gnome 2.5.0

2003-10-20  Jakub Steiner <jimmac@ximian.com>

	minor indentation a various updates patch 
	from Luca Ferretti <elle.uca@infinito.it>:
	
	* use GNOME (not Gnome) in index.theme
	* add missed 32x32/stock/object to index.theme
	* remove from scalable/emblems/Makefile.am replaced emblems
	* add some missed icon.in files in po/POTFILES.in 
	* update entry for replaced emblems in POTFILES.in

2003-10-17  Jakub Steiner <jimmac@ximian.com>

	* index.theme.in
	* configure.in
	* 16x16/stock/code/stock_script.png
	* 24x24/stock/code/stock_script.png
	* 32x32/stock/code/stock_script.png
	* 48x48/stock/code/stock_script.png
	* {32x32/48x48}/stock/Makefile.am
	* {16x16,24x24,32x32,48x48}/stock/code/Makefile.am: liked the emblem in
	  GIMP's preferences. Will be handy I'm sure.
	
	* 48x48/emblems/emblem-OK.icon.in
	* 48x48/emblems/emblem-OK.png
	* 48x48/emblems/emblem-certified.icon.in
	* 48x48/emblems/emblem-certified.png
	* 48x48/emblems/emblem-generic.icon.in
	* 48x48/emblems/emblem-generic.png
	* 48x48/emblems/emblem-important.icon.in
	* 48x48/emblems/emblem-important.png
	* 48x48/emblems/emblem-special.png
	* 48x48/emblems/Makefile.am: more emblems as bitmaps

2003-10-16  Jakub Steiner <jimmac@ximian.com>

	* 16x16/stock/io/stock_bluetooth.png
	* 24x24/stock/io/stock_bluetooth.png
	* 32x32/stock/io/stock_bluetooth.png
	* 48x48/stock/io/stock_bluetooth.png