@@ -1,5 +1,10 @@
 2003-10-21  Jakub Steiner <jimmac@ximian.com>
 
+	* 16x16/stock/media/stock_shuffle.png
+	* 16x16/stock/media/Makefile.am: missed one
+
+2003-10-21  Jakub Steiner <jimmac@ximian.com>
+
 	* 16x16/stock/media/stock_media-stop.png
 	* 16x16/stock/media/stock_media-rew.png
 	* 16x16/stock/media/stock_media-rec.png
